--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -5,7 +5,7 @@
   justify-content: center;
   padding-left: 5vw;
   padding-right: 5vw;
-  padding-bottom: 5vh;
+  padding-bottom: 12px;
 }
 .header-title {
   color: white;
@@ -13,39 +13,38 @@
   font-family: "Times New Roman", Times, serif;
 }
 .card {
-  padding-top: 0.4vw;
-  padding-left: 0.4vw;
-  padding-right: 0.4vw;
-  width: 20vw;
-  margin-top: 0.6vw;
-  margin-left: 0.3vw;
-  margin-right: 0.3vw;
+  padding-top: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  width: 240px;
+  margin-top: 6px;
+  margin-left: 3px;
+  margin-right: 3px;
   outline: solid;
   outline-width: 1px;
   background-color: rgb(243, 248, 255, 0.8);
-  border-radius: 1vw;
 }
 .card-info {
-  font-size: 0.6rem;
+  padding-left: 2px;
+  font-size: 8px;
 }
 .card-title {
-  min-height: 6vw;
-  font-size: 0.9rem;
-  margin-bottom: 0.4vw;
-  padding-left: 1vw;
-  padding-right: 1vw;
+  height: 62px;
+  font-size: 16px;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden;
 }
 .card-image {
-  width: 20vw;
-  height: 11.25vw;
+  width: 240px;
+  height: 135px;
   object-fit: cover;
   outline: solid;
   outline-width: 1px;
   opacity: 0.9;
   z-index: 3;
-  border-radius: 1vw;
 }
