--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -2,14 +2,41 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-left: 5vw;
-  padding-right: 5vw;
+  padding-left: 250px;
   padding-bottom: 12px;
 }
 .header-title {
   color: white;
   font-size: 2rem;
   font-family: "Times New Roman", Times, serif;
+}
+.sidebar {
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 230px;
+  float: left;
+  position: fixed;
+  overflow-y: scroll;
+  height: 100vh;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(20px);
+}
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+.sidebar-page {
+  margin-bottom: 10px;
+}
+.sidebar-page-image {
+  width: 230px;
+  display: block;
+}
+.sidebar-page-link {
+  color: inherit;
+  text-decoration: none;
 }
 .card {
   padding-top: 4px;
