--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -1,9 +1,31 @@
 .contents {
+  padding-left: 250px;
+  padding-bottom: 12px;
+}
+.contents-title {
+  color: black;
+  /* text-decoration-line: underline; */
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 5px;
+  font-size: 1.5rem;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: 100px;
+}
+.contents-title-shadow {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+.contents-rec-cards {
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-left: 250px;
-  padding-bottom: 12px;
+}
+.contents-hr {
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 1px;
 }
 .header-title {
   color: white;
