--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -77,7 +77,7 @@
   font-size: 8px;
 }
 .card-title {
-  height: 82px;
+  height: 100px;
   font-size: 16px;
   margin-bottom: 5px;
   padding-left: 5px;
@@ -86,6 +86,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
   overflow: hidden;
+  font-family: "Times New Roman", Times, serif;
 }
 .card-image {
   width: 240px;
