--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -2,20 +2,45 @@
   padding-left: 250px;
   padding-bottom: 12px;
 }
+.contents-title-block-rec {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  margin-top: 6px;
+  margin-left: 3px;
+  margin-right: 3px;
+  width: 240px;
+  background-color: rgb(128, 188, 189, 0.9);
+}
+.contents-title-block-old {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  margin-top: 6px;
+  margin-left: 3px;
+  margin-right: 3px;
+  width: 240px;
+  background-color: rgb(255, 173, 132, 0.9);
+}
 .contents-title {
   color: black;
-  /* text-decoration-line: underline; */
-  padding-top: 10px;
-  padding-left: 20px;
-  padding-bottom: 5px;
   font-size: 1.5rem;
   font-family: "Times New Roman", Times, serif;
-  text-shadow: 100px;
-}
-.contents-title-shadow {
-  background-color: rgba(255, 255, 255, 0.4);
 }
 .contents-rec-cards {
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.contents-old-cards {
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
