--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -2,7 +2,7 @@
   padding-left: 250px;
   padding-bottom: 12px;
 }
-.contents-title-block-rec {
+.contents-title-block {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,43 +15,23 @@
   width: 240px;
   background-color: rgb(128, 188, 189, 0.9);
 }
-.contents-title-block-old {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
-  margin-top: 6px;
-  margin-left: 3px;
-  margin-right: 3px;
-  width: 240px;
-  background-color: rgb(255, 173, 132, 0.9);
-}
 .contents-title {
   color: black;
   font-size: 1.5rem;
   font-family: "Times New Roman", Times, serif;
 }
-.contents-rec-cards {
+.contents-cards {
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.contents-old-cards {
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.contents-hr {
+/* .contents-hr {
   padding-left: 20px;
   padding-right: 20px;
   border: 1px;
-}
+} */
 .header-title {
   color: white;
   font-size: 2rem;
@@ -75,11 +55,12 @@
   display: none;
 }
 .sidebar-page {
-  margin-bottom: 10px;
+  padding-top: 10px;
 }
 .sidebar-page-image {
   width: 230px;
   display: block;
+  padding-top: 3px;
 }
 .sidebar-page-link {
   color: inherit;
