--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -125,3 +125,33 @@
   outline-width: 1px;
   transition-duration: 0.2s;
 }
+.recent-textbox {
+  height: 450px;
+  width: 800px;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 100;
+}
+.recent-info {
+  position: absolute;
+  color: rgba(200, 200, 200);
+  text-align: center;
+  padding-top: 170px;
+  padding-left: 30px;
+  padding-right: 30px;
+  z-index: 100;
+  font-size: 16px;
+  font-family: sans-serif;
+}
+.recent-text {
+  text-align: center;
+  position: absolute;
+  color: rgba(255, 255, 255);
+  text-align: center;
+  padding-top: 200px;
+  padding-left: 30px;
+  padding-right: 30px;
+  z-index: 100;
+  font-size: 30px;
+  font-family: sans-serif;
+}
