--- a/src/styles/pcStyle.css
+++ b/src/styles/pcStyle.css
@@ -14,6 +14,7 @@
   margin-right: 3px;
   width: 240px;
   background-color: rgb(128, 188, 189, 0.9);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 .contents-title {
   color: black;
@@ -57,6 +58,7 @@
   width: 230px;
   display: block;
   padding-top: 3px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 .sidebar-page-link {
   color: inherit;
@@ -71,6 +73,7 @@
   margin-left: 3px;
   margin-right: 3px;
   background-color: rgb(248, 248, 255, 0.95);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 .card-info {
   padding-left: 2px;
@@ -115,9 +118,10 @@
   width: 800px;
   max-width: 100%;
   position: absolute;
-  outline: solid;
-  outline-width: 1px;
+  /* outline: solid; */
+  /* outline-width: 1px; */
   transition-duration: 0.2s;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 .recent-textbox {
   height: 450px;
